--- a/package.json
+++ b/package.json
@@ -15,23 +15,29 @@
     "@react-native-community/geolocation": "^3.0.6",
     "@react-navigation/stack": "^6.3.16",
     "axios": "^1.4.0",
+    "cors": "^2.8.5",
     "expo": "~48.0.11",
     "expo-status-bar": "~1.4.4",
+    "geolib": "^3.3.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.71.7",
+    "react-native-distance": "^0.0.0-beta-2",
     "react-native-gesture-handler": "^2.9.0",
-    "react-native-maps": "1.3.2",
+    "react-native-google-matrix": "^0.0.3",
+    "react-native-maps": "^1.7.1",
     "react-native-reanimated": "~2.14.4",
     "react-native-screens": "^3.20.0",
     "react-native-table-component": "^1.2.2",
+    "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.10",
     "react-native-webview": "11.26.0",
     "react-navigation": "^4.4.4",
     "react-ng-cli": "^0.0.6"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@babel/plugin-syntax-top-level-await": "^7.14.5"
   },
   "private": true
 }
